--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+black==24.10.0
 blinker==1.9.0
 click==8.1.7
 cs50==9.4.0
@@ -7,7 +8,12 @@ gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+mypy-extensions==1.0.0
 packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.6
+psycopg2-binary==2.9.10
+python-dotenv==1.0.1
 SQLAlchemy==2.0.36
 sqlparse==0.5.2
 termcolor==2.5.0
