--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,13 @@ packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
 psycopg2-binary==2.9.10
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+six==1.17.0
 SQLAlchemy==2.0.36
 sqlparse==0.5.2
 termcolor==2.5.0
+types-SQLAlchemy==1.4.53.38
 typing_extensions==4.12.2
 Werkzeug==3.1.3
 wheel==0.45.0
